v3.3.2   (Jan Wolter - NOT YET RELEASED)
----------------------------------------------
 * Added test/test.pipe.php, a PHP version of test/test.pipe contributed
   by Claus Andersen.

v3.3.1   (Jan Wolter - Oct 12, 2011)
----------------------------------------------
 * Deleted most of the sample authenticators from the distribution. They
   are mostly old and crufty or available elsewhere. No need to clutter
   the main distribution with them.
 * Added code to support caching authentications with mod_authn_socache.
   This is enabled by the "AuthExternalProvideCache On" directive.  This
   feature should be considered experimental, since mod_authn_socache still
   seems buggy and it's interface may not have been finalized.

v3.3.0   (Jan Wolter - Oct 6, 2011)
----------------------------------------------
 * Revised to work with Apache 2.3 / 2.4.  Will not work with previous Apache
   versions.
 * Deleted 'GroupExternalAuthoritative' and 'AuthzExternalAuthoritative'
   directives which are obsolete.
 * Deleted 'GroupExternalError' directive which is superceded by Apache's
   'AuthzSendForbiddenOnFailure' directive.

v3.2.6   (Jan Wolter - Oct 6, 2011)
-----------------------------------------------
 * Modified parsing of "Require groups" line so that you can have group
   names that include spaces by enclosing them in quotes.  This change
   suggested by David Homborg.
 * Default action of Makefile changed to "build" not "install".
 * Corrected an exploitable SQL injection flaw in the sample mysql
   authenticator.
 * Add references to version 3.3.x to documentation.

v3.2.5   (Jan Wolter - Oct 29, 2009)
-----------------------------------------------
 * Fixed a bug introduced in 3.2.0 in which data for checkpassword-type
   authenticators is written to the authenticator's stdin instead of stderr.

v3.2.4   (Jan Wolter - May 20, 2009)
-----------------------------------------------
 * Dropped the radius code from the distribution, because of possible problems